--- a/2020_MYCO_T2_300x250_LOWER_etron/index.html
+++ b/2020_MYCO_T2_300x250_LOWER_etron/index.html
@@ -24,6 +24,7 @@
                 <div class="logo_text"></div>
             </div>
             <img src='' class='modelLockup'/>
+            <img id="headline_local_copy" src="">
             <div class="cta"></div>
             <div class="clickTag"></div>
             <div class="replay"></div>
